some repairs, fixed the image, aligned the icon

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body {
   -webkit-font-smoothing: antialiased;
   --gray: hsla(240, 9%, 89%, 1);
   --another-gray: hsla(240, 7%, 78%, 1);
+  --black: hsl(240, 6%, 13%);
 }
 
 body {
@@ -29,16 +30,57 @@ main {
   text-align: center;
 }
 
+.avatar {
+  width: 10rem;
+  margin: 11.5rem auto 0;
+
+  position: relative;
+}
+
+.avatar span {
+  position: absolute;
+  top: -15px;
+  z-index: 1;
+}
+
+.avatar > img {
+  width: 10rem;
+  height: 11.5rem;
+  object-fit: cover;
+
+  clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
+}
+
 a {
   text-decoration: none;
   color: var(--another-gray);
+  margin-top: 0.25rem;
+  display: flex;
+  gap: 0.75rem;
+
+  justify-content: center;
+  align-items: center;
 }
 
 h1 {
   font-size: 1.5rem;
   color: var(--gray);
+
+  margin-top: 1.5rem;
 }
 
 p {
   color: var(--gray);
+  margin-top: 2rem;
+}
+
+ul {
+  margin-top: 4rem;
+  list-style: none;
+  padding: 0;
+
+  display: flex;
+  gap: 0.5rem;
+
+  justify-content: center;
 }
